--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
                 </div>
             </div>
         </section>
-        <!-- Portfolio-->
+        <!-- Portfolio, currently removed due to lack of use-->
         <!-- Call to action-->
         <section class="page-section bg-dark text-white">
             <div class="container px-4 px-lg-5 text-center">
